Open rewrite